Update PostgreSQL with Python_psycopg2.ipynb

--- a/PostgreSQL with Python_psycopg2.ipynb
+++ b/PostgreSQL with Python_psycopg2.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "#your pgadmin account and password here\n",
-    "conn = pg2.connect(database = 'dvdrental', user = 'postgres', password= '496100551') "
+    "conn = pg2.connect(database = 'dvdrental', user = 'postgres', password= '496------') "
    ]
   },
   {
